# IMUPoser-Release

./: .gitignore  README.md  pyproject.toml
scripts/1. Preprocessing/: 1. preprocess_all.py  2. preprocess_all_to_imuposer_at_25fps.py
scripts/2. Train/: 1. Train Global Model.py  train_bs512.py
src/imuposer/: config.py
src/imuposer/datasets/: globalModelDataset.py  utils.py
src/imuposer/models/: loss_functions.py
src/imuposer/models/LSTMs/: IMUPoser_Model.py  IMUPoser_Model_FineTune.py
